
* The protocol.fsp.sort option has been removed.  ELinks always sorts.

Miscellaneous:

* major bug 181: Slave ELinks processes can now run an external editor.
  This used to work in the master process only.
* major bug 722: Filter CSS according to media types.  New option
  document.css.media.
* bug 638: Propagate the existence of $DISPLAY from slave terminals to
  mailcap test commands.
* bug 963: New option document.css.ignore_display_none.
* bug 977: Fixed crash when opening in new tab a non link with onclick
  attribute.
* bug 983: Give preference to the Content-Type specified in the HTTP
  header over that specified via the HTML meta tag.
* bug 1008: File upload fields in HTML forms now stream the files to
  the server, instead of reading them to memory in advance.  This lets
  you upload larger files.  The downsides are that ELinks may use a
  cached response even if you have modified a file between requests,
  and that ELinks can send inconsistent data if you modify a file
  while it is being uploaded.
* Really retry forever when connection.retries = 0.
* enhancement: Session-specific options.  Any options changed with
  toggle-* actions no longer affect other tabs or other terminals.
* enhancement: Domain-specific options.  Use set_domain in elinks.conf
  to e.g. disable cookies for google.com.  The option manager window
  does not yet support this.
* enhancement 867: Use bracketed paste mode on xterm.  This requires
  xterm patch #228 or later configured with --enable-readline-mouse.
* enhancement 824: Experimental support for combining characters.
  See features.conf for details.
* enhancement: Add a new entry Link Info under Link main menu.
* enhancement: New option protocol.http.compression.
* enhancement: Indicate backgrounded downloads using an unused led.

//////////////////////////////////////////////////////////////////////
The following changes should be removed from NEWS before ELinks 0.13.0