@@ -22,6 +22,8 @@ Miscellaneous:
   document.css.media.
 * bug 638: Propagate the existence of $DISPLAY from slave terminals to
   mailcap test commands.
+* bug 698: Attach controls to the intended form even if it is
+  incorrectly nested in a table.  (Was broken in 0.11.4.)
 * bug 963: New option document.css.ignore_display_none.
 * bug 977: Fixed crash when opening in new tab a non link with onclick
   attribute.
